tests/interpreter/logical-or-bad-types2.stderr
error: expected 'Bool', got 'Number'
 --> $DIR/logical-or-bad-types2.lox:1:10
  |
1 | false or 2;
  |          ^
